# ovn-scale-test

./: .gitignore  .travis.yml  AUTHORS  README.rst  install.sh  install_rally_ovs.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ansible/: README.rst  site.yml
ansible/doc/: binding-strategy.rst  create-router-task.rst
ansible/docker/: Dockerfile  Makefile  ovn-sandbox-chassis.sh  ovn-sandbox-database.sh
ansible/docker/base/: Dockerfile  Makefile  sources.list
ansible/docker/ovn/: Dockerfile  Makefile  ovn-sandbox-chassis.sh  ovn-sandbox-database.sh  ovn-sandbox-north-ovsdb.sh  ovn-sandbox-northd.sh  ovn-sandbox-south-ovsdb.sh
ansible/docker/rally/: Dockerfile  Makefile
ansible/etc/: variables.yml
ansible/group_vars/: all.yml
ansible/inventory/: ovn-hosts
ci/: README.md  docker-rally.sh  ovn-scale.conf  prepare.sh  scale-cleanup.sh  scale-hosts.sh  scale-lib.sh  scale-pure-ovn-hosts.sh  scale-run.sh  scale-test.sh
ci/ansible/: all.yml  docker-ovn-hosts-example
doc/ext/: plugin_reference.py
doc/source/: Makefile  conf.py  index.rst  install.rst  overview.rst  tutorial.rst
doc/source/plugin/: plugin_reference.rst
doc/source/tutorial/: step_1_setting_up_the_environment.rst  step_2_rally_input_task_format.rst  step_3_task_templates.rst
rally_ovs/cli/: main.py
rally_ovs/plugins/: __init__.py
samples/deployments/: ovn-multihost-docker.json  ovn-multihost-physical-docker.json  ovn-multihost-physical.json  ovn-multihost-single-controller-physical.json  ovn-multihost.json  ovn-sandbox-control-node.json  ovn-sandbox-farm-node.json
(+80 files in other folders)
