[metadata]
name = rally-ovs
summary = Scalability test tool for Open vSWitch
description-file =
    README.rst
author = ebay
author-email = lhuang8@ebay.com
home-page = http://www.TBD.org/
classifier =
    Environment :: OVS
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    rally_ovs

#data_files =
#    etc/bash_completion.d =
#        etc/rally-ovs.bash_completion

[entry_points]
console_scripts =
    rally-ovs = rally_ovs.cli.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
